--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,45 @@
+body {
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 1em;
+}
+
+h1 {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
+h3 {
+  text-align: center;
+}
+
+#image-container {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
 img {
   height: 350px;
   width: 350px;
 }
+
+#resultsTable {
+
+}
+
+thead td {
+  font-weight: bold;
+}
+
+tr:nth-of-type(even) {
+  background-color: #ccccff;
+}
+
+td {
+   padding: 5px;
+   text-align: center;
+ }
