styling applied to charts.  started styling on buttons

--- a/css/layout.css
+++ b/css/layout.css
@@ -31,3 +31,10 @@ td {
  h3 {
    text-align: center;
  }
+
+ .flex-container {
+   display: flex;
+   flex-flow: row nowrap;
+   align-items: center;
+   justify-content: space-around;
+ }
