--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,16 @@ tr:nth-of-type(even) {
 
 .buttons {
   background-color: #ccccff;
-  border: 2px #000066;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 20px;
   border-radius: 25%;
+  padding: 10px;
 }
 
 .buttons:hover {
     background-color: white;
+}
+
+.buttons:focus {
+  outline: none;
 }
